@@ -7,14 +7,14 @@ extern crate glfw;
 
 impl App {
 	pub fn ini(&mut self) -> i8 {
-		eprintln!("DeltaWorld {}.{}.{}",VER.maj,VER.min,VER.pat);
+		println!("\x1B[0m\x1B[1mDeltaWorld\x1B[0m {}.{}.{} \u{2014} Copyright 2023 \x1B[0m\x1B[1mGabriel Jensen\x1B[0m.\n",VER.maj,VER.min,VER.pat);
 
 		let mut gfx = self.inigfx();
 
-		while !gfx.win.should_close() {
-			gfx.glfw.poll_events();
-		}
+		let cod = self.lop(&mut gfx);
 
-		return 0x45;
+		println!("goodbye");
+		eprintln!("exiting with code {}",cod);
+		return cod;
 	}
 }
